--- a/po/tr.po
+++ b/po/tr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-02 12:19+0200\n"
+"POT-Creation-Date: 2018-10-16 15:03+0200\n"
 "PO-Revision-Date: 2011-11-23 07:21+0200\n"
 "Last-Translator: Halil <halilpk@gmail.com>\n"
 "Language-Team: turkish <i18n@suse.de>\n"
@@ -279,6 +279,10 @@ msgstr ""
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
 msgid "B"
 msgstr ""
+
+#, fuzzy, c-format
+msgid "Cannot delete snapshot %d."
+msgstr " Anlık görüntüyü sil:"
 
 msgid "Cleanup"
 msgstr "Temizle"
