--- a/po/ca.po
+++ b/po/ca.po
@@ -2,11 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-02 12:19+0200\n"
+"POT-Creation-Date: 2018-10-16 15:03+0200\n"
 "PO-Revision-Date: 2018-10-04 13:43+0000\n"
 "Last-Translator: David Medina <medipas@gmail.com>\n"
-"Language-Team: Catalan "
-"<https://l10n.opensuse.org/projects/snapper/master/ca/>\n"
+"Language-Team: Catalan <https://l10n.opensuse.org/projects/snapper/master/ca/>\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,8 +23,7 @@ msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c <algo>\tNeteja l'algoritme per a les instantànies."
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
-msgstr ""
-"\t--command <ordre>\t\tExecuta l'ordre i crea les instantànies pre i post."
+msgstr "\t--command <ordre>\t\tExecuta l'ordre i crea les instantànies pre i post."
 
 msgid "\t--config, -c <name>\t\tSet name of config to use."
 msgstr "\t--config, -c <name>\t\tEstableix el nom de config a usar."
@@ -256,6 +254,10 @@ msgstr "Error ACL."
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
 msgid "B"
 msgstr "B"
+
+#, fuzzy, c-format
+msgid "Cannot delete snapshot %d."
+msgstr "  Suprimeix la instantània:"
 
 msgid "Cleanup"
 msgstr "Neteja"
