--- a/po/da.po
+++ b/po/da.po
@@ -6,11 +6,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: snapper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-02 12:19+0200\n"
+"POT-Creation-Date: 2018-10-16 15:03+0200\n"
 "PO-Revision-Date: 2018-10-06 16:47+0000\n"
 "Last-Translator: scootergrisen <scootergrisen@gmail.com>\n"
-"Language-Team: Danish <https://l10n.opensuse.org/projects/snapper/master/da/>"
-"\n"
+"Language-Team: Danish <https://l10n.opensuse.org/projects/snapper/master/da/>\n"
 "Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,8 +27,7 @@ msgid "\t--cleanup-algorithm, -c <algo>\tCleanup algorithm for snapshots."
 msgstr "\t--cleanup-algorithm, -c<algo>\tRyd algoritme op til øjebliksbilleder."
 
 msgid "\t--command <command>\t\tRun command and create pre and post snapshots."
-msgstr ""
-"\t--command <kommando>\tKør kommando og opret præ- og post-øjebliksbilleder."
+msgstr "\t--command <kommando>\tKør kommando og opret præ- og post-øjebliksbilleder."
 
 msgid "\t--config, -c <name>\t\tSet name of config to use."
 msgstr "\t--config, -c <navn>\t\tAngiv navn på konfiguration der skal bruges."
@@ -260,6 +258,10 @@ msgstr "ACL-fejl."
 #. TRANSLATORS: symbol for "bytes" (best keep untranslated)
 msgid "B"
 msgstr "B"
+
+#, fuzzy, c-format
+msgid "Cannot delete snapshot %d."
+msgstr "  Slet øjebliksbillede:"
 
 msgid "Cleanup"
 msgstr "Oprydning"
