--- a/dists/debian/changelog
+++ b/dists/debian/changelog
@@ -1,3 +1,9 @@
+snapper (0.8.0) stable; urgency=low
+
+  * Updated to version 0.8.0
+
+ -- Arvin Schnell <aschnell@suse.com>  Mon, 29 Oct 2018 09:02:13 +0100
+
 snapper (0.7.2) stable; urgency=low
 
   * Updated to version 0.7.2
